--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
   }
 
   #form{
-    width: 100%;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -75,9 +74,10 @@
 
   @media only screen and (max-width:576px){
     div{
-      width: 80%;
+      width: 90%;
       padding: 30px 10px;
       margin-top: 30px;
+      margin: 0 auto;
     }
   }
 
